...
    }
    
    func showResult(message:String!){
        
        let alertController = UIAlertController(title: "Result", message: message, preferredStyle: UIAlertController.Style.alert)
        
        let doneAction = UIAlertAction.init(title: "Done", style: UIAlertAction.Style.default, handler: nil)
          
    }
    
    @IBOutlet weak var cardNumberTextField: UITextField! {
        
        didSet {
...
