...
    // MARK: - Setup Methods
    private func setupMapView() {
        mapView = MKMapView(frame: view.bounds)
        mapView.showsUserLocation = true
        mapView.autoresizingMask = [.flexibleWidth, .flexibleHeight]
        mapView.delegate = self
        view.accessibilityIdentifier = "MapView"
        view.addSubview(mapView)
    }
    
    private func setupLoadingIndicator() {
        loadingIndicator.center = view.center
        view.addSubview(loadingIndicator)
...
